# localsend-rs

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  TECHNICAL.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
.journal/: 2026-01-16.md
docs/superpowers/plans/: 2026-07-12-localsend-rs-v2.1-foundation.md
docs/superpowers/specs/: 2026-07-12-localsend-rs-v2.1-alignment-design.md
e2e/: docker-compose.yml  run.sh
e2e/docker/: localsend-rs.Dockerfile
e2e/scripts/: receiver.sh  sender.sh
src/: crypto.rs  device.rs  error.rs  file.rs  lib.rs  main.rs  path_safety.rs  prelude.rs
src/cli/: cli.rs  mod.rs  ui.rs
src/cli/commands/: discover.rs  mod.rs  receive.rs  send.rs  tui.rs
src/client/: client.rs  mod.rs  trust_policy.rs
src/core/: builders.rs  file.rs  mod.rs  session.rs  transfer.rs
src/crypto/: fingerprint.rs  hash.rs  mod.rs  tls.rs
src/discovery/: http.rs  mod.rs  multicast.rs  traits.rs
src/protocol/: constants.rs  mod.rs  types.rs  validation.rs
src/server/: crosscopy_authorized.rs  events.rs  handlers.rs  mod.rs  pin.rs  routes.rs  server.rs  state.rs  web_share.rs
src/storage/: mod.rs  tokio_fs.rs  traits.rs
src/tui/: app.rs  mod.rs  popup.rs  theme.rs
src/tui/screens/: device_list.rs  main_menu.rs  mod.rs  receive.rs  send_file.rs  send_text.rs  settings.rs
tests/: conformance_pin.rs  conformance_prepare_upload.rs  conformance_upload.rs  interop_accept.rs  interop_builder.rs  interop_crosscopy_authorized.rs  interop_message.rs  interop_session.rs  interop_tls.rs  interop_upload.rs  interop_web_share.rs  unit_schema.rs
tests/common/: mod.rs
