[package]
name = "localsend-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["cli", "https"]
cli = ["dep:clap", "dep:indicatif", "dep:colored", "dep:inquire", "dep:comfy-table"]
https = ["dep:axum-server", "dep:tokio-rustls", "dep:rustls-pemfile", "dep:rcgen"]

[dependencies]
# Core
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.8", features = ["tls-rustls"], optional = true }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tower = "0.5"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.1", optional = true }
rcgen = { version = "0.13", optional = true }

# Networking
async-stream = "0.3"
futures-util = "0.3"
bytes = "1.0"

# Utilities
mime_guess = "2.0"
sha2 = "0.10"
base64 = "0.22"

# CLI (only with cli feature)
clap = { version = "4.5", features = ["derive", "env"], optional = true }
indicatif = { version = "0.17", optional = true }
colored = { version = "2.1", optional = true }
inquire = { version = "0.7", optional = true }
comfy-table = { version = "7.1", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1.89"
